# xrootd-rados-oss

./: CMakeLists.txt  README  xrootd-rados-oss.spec
cmake/: FindLibRadosFs.cmake  FindXRootD.cmake
src/: CMakeLists.txt  DirInfo.cc  DirInfo.hh  RadosOss.cc  RadosOss.hh  RadosOssDefines.hh  RadosOssDir.cc  RadosOssDir.hh  RadosOssFile.cc  RadosOssFile.hh
